python-pyeclib (1.1.1-1) unstable; urgency=medium

  * New upstream release.
  * Add --install-liberasurecode=no when installing with "python setup.py
    install".
  * Drop version of python-all-dev build-depends.
  * Dropped big-endian.patch applied upstream.
  * Rebased patches:
    - disable-check-for-liberasure-code.patch
    - more-rpath-tweak-removal.patch

 -- Thomas Goirand <zigo@debian.org>  Tue, 10 Nov 2015 11:08:06 +0000

python-pyeclib (1.0.8-3) unstable; urgency=medium

  * Team upload.
  * Drop BD's on gf-complete and jerasure dev packages; not required
    due to the runtime nature of backend loading in liberasurecode.
  * d/p/big-endian.patch: Cherry pick fix from upstream VCS to resolve
    issues on big endian architectures.

 -- James Page <james.page@ubuntu.com>  Wed, 09 Sep 2015 13:32:08 +0100

python-pyeclib (1.0.8-2) unstable; urgency=medium

  * Team upload.
  * Match version of liberasurecode-dev with pyeclib.

 -- James Page <james.page@ubuntu.com>  Thu, 06 Aug 2015 14:19:02 +0100

python-pyeclib (1.0.8-1) unstable; urgency=medium

  [ James Page ]
  * d/rules: Enable unit testing for python2.

  [ Thomas Goirand ]
  * New upstream release.
  * Rebased patches.

 -- Thomas Goirand <zigo@debian.org>  Wed, 05 Aug 2015 08:35:22 +0000

python-pyeclib (1.0.7m-1) unstable; urgency=medium

  * New upstream release.
  * Added dh-python as build-depends.

 -- Thomas Goirand <zigo@debian.org>  Sun, 17 May 2015 05:55:24 +0200

python-pyeclib (1.0.5m-1) unstable; urgency=medium

  * New upstream release using liberasurecode 1.0.5.
  * Refreshed patches.

 -- Thomas Goirand <zigo@debian.org>  Fri, 13 Mar 2015 23:23:29 +0000

python-pyeclib (0.9.10-3) unstable; urgency=medium

  * Fixed the debian/watch file to use the URL from bitbucket.

 -- Thomas Goirand <zigo@debian.org>  Sun, 08 Mar 2015 18:41:06 +0000

python-pyeclib (0.9.10-2) unstable; urgency=medium

  * Added missing python{3,}-all-dev build-depends.