@@ -9,12 +9,12 @@ UPSTREAM_GIT = https://bitbucket.org/kmgreen2/pyeclib.git
 %:
 	dh $@ --buildsystem=python_distutils --with python2,python3
 
-override_dh_install:
-	set -e && for pyvers in $(PYTHONS); do \
+override_dh_auto_install:
+	set -e ; for pyvers in $(PYTHONS); do \
 		python$$pyvers setup.py install --install-layout=deb --install-liberasurecode=no \
 			--root $(CURDIR)/debian/python-pyeclib; \
 	done
-	set -e && for pyvers in $(PYTHON3S); do \
+	set -e ; for pyvers in $(PYTHON3S); do \
 		python$$pyvers setup.py install --install-layout=deb --install-liberasurecode=no \
 			--root $(CURDIR)/debian/python3-pyeclib; \
 	done
